started a new document

--- a/tex/edp_changes.bib
+++ b/tex/edp_changes.bib
@@ -75,3 +75,14 @@
   pages   = {86-108},
   volume  = 15
 }
+
+
+@article{Gonul,
+  author  = {Fusun Gonul and Kannan Srinivasan}, 
+  title   = {Estimating the Impact of Consumer Expectations of Coupons on Purchase Behavior: A Dynamic Structural Model},
+  journal = {Marketing Science},
+  year    = 1996,
+  number  = 3,
+  pages   = {262-279},
+  volume  = 15
+}
