reorganized tex folder

--- a/tex/bibliography.bib
+++ b/tex/bibliography.bib
@@ -44,7 +44,7 @@
 }
 
 @article{fibich,
-  author  = {Gadi Fibich {,} Arieh Gavious {,} Oded Lowengart} 
+  author  = {Gadi Fibich {,} Arieh Gavious {,} Oded Lowengart}, 
   title   = {Optimal Price Promotion in the Presence of Asymmetric Reference-Price Effects},
   journal = {Managerial and Decision Economics},
   year    = 2007,
